@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BattlefieldTests.cs" />
     <Compile Include="Mocks\RandomNumberGeneratorMock.cs" />
     <Compile Include="PatternFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
